fixed sign-up form wrapping issue

--- a/frontend/src/styles/components/_sign-up.scss
+++ b/frontend/src/styles/components/_sign-up.scss
@@ -2,7 +2,7 @@
     .slideout__inner {
         padding: 30px 25px;
         @include mq("desktop") {
-            width: 720px;
+            width: 730px;
         }
 
         @include mq("mobile") {
